Bug 389600 - "Move" is not an appropriate item in the drop menu for URLs
Summary: "Move" is not an appropriate item in the drop menu for URLs
Status: RESOLVED FIXED
Alias: None
Product: frameworks-kio
Classification: Frameworks and Libraries
Component: general (other bugs)
Version First Reported In: git master
Platform: Neon Linux
: NOR normal
Target Milestone: ---
Assignee: David Faure
URL:
Keywords:
: 445208 (view as bug list)
Depends on:
Blocks: 446031
  Show dependency treegraph
 
Reported: 2018-01-29 15:06 UTC by Nate Graham
Modified: 2025-06-05 17:38 UTC (History)
4 users (show)

See Also:
Latest Commit:
Version Fixed/Implemented In: 6.6
Sentry Crash Report:


Attachments

Note You need to log in before you can comment on or make changes to this bug.
Description Nate Graham 2018-01-29 15:06:09 UTC
Steps to reproduce:
1. Open Firefox and navigate to any website
2. Drag the URL from the URL bar to the desktop

Expected results:
Plasma creates a .desktop file launcher for the URL instantly

Actual results:
Plasma shows the standard menu offering "Move here", "Copy here", and "Link here". But "Move here" and "Copy here" don't make sense when the source is a URL from a web browser. It should just automatically choose "Link here" and not bother to show the menu.
Comment 1 Kai Uwe Broulik 2018-02-05 15:58:39 UTC
I often drag images from the browser to copy them, so I don't see how we can implement this without sacrificing others. "Move here" doesn't make sense but Copy certainly does.
Comment 2 Nate Graham 2018-02-05 18:15:35 UTC
Can we introspect the MIME type, maybe? Then only links would always get "Link here".
Comment 3 Patrick Silva 2022-01-17 12:17:35 UTC
Currently, on neon unstable is created a Stick Note when I drag a URL from Firefox and drop it on desktop.
At least on Wayland.
Comment 4 Nate Graham 2022-01-17 15:50:05 UTC
LOL can reproduce. That seems like it's a Plasma issue. Can you file a bug on Plasma for that?
Comment 5 Patrick Silva 2022-02-05 10:26:57 UTC
Currently I can only reproduce comment 3 with chromium-based browsers running natively on Wayland.
Reported as bug 449645.
Comment 6 Nate Graham 2024-08-11 05:29:00 UTC
In progress with https://invent.kde.org/frameworks/kio/-/merge_requests/1683.
Comment 7 Patrick Silva 2024-08-11 13:39:18 UTC
"Move" is not an appropriate item with images too. See bug 445208
Comment 8 Nate Graham 2024-08-11 14:03:17 UTC
Aha, that's exactly what I'm fixing here, yeah. Ultimately that's the same issue as this one; marking it as a duplicate.
Comment 9 Nate Graham 2024-08-11 14:03:19 UTC
*** Bug 445208 has been marked as a duplicate of this bug. ***
Comment 10 Nate Graham 2024-08-12 13:05:50 UTC
Git commit 0c46f4abd6882779fdb8b113b6323d15bc98b369 by Nate Graham.
Committed on 12/08/2024 at 13:05.
Pushed by ngraham into branch 'master'.

Don't show "Move" item in drop menu for source files accessed using http

Even though the http protocol technically supports deleting, this 
is never implemented or relevant for a drag operation. Special-case
this in dragjob.cpp so that we don't show a broken "Move" action in
the drop menu when dragging stuff out of a web browser.
FIXED-IN: 6.6

M  +6    -1    src/widgets/dropjob.cpp

https://invent.kde.org/frameworks/kio/-/commit/0c46f4abd6882779fdb8b113b6323d15bc98b369