Don't show "Move" item in drop menu for source files accessed using http

Even though the http protocol technically supports deleting, this 
is never implemented or relevant for a drag operation. Special-case
this in dragjob.cpp so that we don't show a broken "Move" action in
the drop menu when dragging stuff out of a web browser.

BUG: 389600
FIXED-IN: 6.6